--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+
+        <!--JSTL Template Engine-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
     <profiles>
