HW5: Optional Add profiles to MealServlet and SpringMain

--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,11 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.9</version>
+        </dependency>
     </dependencies>
 
     <profiles>
