--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -11,3 +11,4 @@ jdbc.initLocation=classpath:db/initDB.sql
 jpa.showSql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
+spring.jpa.database-platform=org.hibernate.dialect
