--- a/pom.xml
+++ b/pom.xml
@@ -82,8 +82,9 @@
                         </systemProperties>
                         <dependencies>
                             <dependency>
-                                <groupId>org.postgresql</groupId>
-                                <artifactId>postgresql</artifactId>
+                                <groupId>org.hsqldb</groupId>
+                                <artifactId>hsqldb</artifactId>
+                                <version>2.6.0</version>
                             </dependency>
                         </dependencies>
                     </container>
@@ -211,7 +212,7 @@
 
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <artifactId>spring-webmvc</artifactId>
         </dependency>
 
         <!--Test-->
