HW6: Transfer impl from mealServlet to JspMealController

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -10,3 +10,16 @@ user.active=Active
 user.registered=Registered
 meal.title=Meals
 common.select=Select
+meal.calories=Calories
+meal.date=Date
+meal.description=Description
+meal.update=Update
+meal.delete=Delete
+meal.add=Add meal
+from.date=From date
+to.date=To date
+from.time=From time
+to.time=To time
+meal.filter=Filter
+button.save=Save
+button.cancel=Cancel
