--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -10,5 +10,5 @@ database.init=true
 jdbc.initLocation=classpath:db/initDB.sql
 jpa.showSql=true
 hibernate.format_sql=true
-hibernate.use_sql_comments=true
+hibernate.use_sql_comments=false
 spring.jpa.database-platform=org.hibernate.dialect
