--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <junit.jupiter.version>5.7.2</junit.jupiter.version>
         <assertj.version>3.19.0</assertj.version>
         <hamcrest.version>2.2</hamcrest.version>
+        <json-path.version>2.6.0</json-path.version>
 
         <!-- Hibernate -->
         <hibernate.version>5.5.2.Final</hibernate.version>
@@ -325,6 +326,12 @@
             <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${json-path.version}</version>
+            <scope>test</scope>
+        </dependency>
 
 
         <dependency>
@@ -332,6 +339,7 @@
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
